--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
               data-aos-mirror="true"
             >
               <h1 class="text-3xl font-semibold text-text2 italic">
-                Hi Semuanya, Saya
+                Hi, Saya
                 <span class="block font-bold text-slate-600 text-4xl"
                   >Mohamad Ansori Pratama</span
                 >
@@ -73,7 +73,7 @@
                 Junior Web Developer
               </h1>
               <p class="font-bold text-text2 text-sm mb-10 leading-relaxed">
-                jangan suka
+                jangan
                 <span class="text-gray-600 font-bold text-lg">menyerah</span>
                 sebelum kamu mencobanya!!
               </p>
