--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
               </p>
 
               <button
-                class="bg-slate-800 p-3 rounded-full self-center shadow-2xl font-bold text-text2 hover:bg-slate-600 hover:text-text2 hover:shadow-inner"
+                class="bg-slate-800 p-3 rounded-full self-center shadow-2xl font-bold text-text2 hover:bg-slate-600 hover:text-text2 hover:shadow-inner hover:transition-all"
               >
                 Our Contact
               </button>
@@ -190,7 +190,7 @@
                 data-aos-mirror="true"
               >
                 <img
-                  class="max-w-full mx-auto hover:scale-110"
+                  class="max-w-full mx-auto hover:scale-110 hover:transition-all"
                   src="./dist/img/icons8-javascript-480.png"
                   alt=""
                   srcset=""
@@ -211,7 +211,7 @@
                 data-aos-mirror="true"
               >
                 <img
-                  class="max-w-full mx-auto hover:scale-110"
+                  class="max-w-full mx-auto hover:scale-110 hover:transition-all"
                   src="./dist/img/icons8-html-480.png"
                   alt=""
                   srcset=""
@@ -230,7 +230,7 @@
                 data-aos-mirror="true"
               >
                 <img
-                  class="max-w-full mx-auto hover:scale-110"
+                  class="max-w-full mx-auto hover:scale-110 hover:transition-all"
                   src="./dist/img/icons8-css-480.png"
                   alt=""
                   srcset=""
@@ -249,7 +249,7 @@
                 data-aos-mirror="true"
               >
                 <img
-                  class="max-w-full mx-auto m-7 hover:scale-110"
+                  class="max-w-full mx-auto m-7 hover:scale-110 hover:transition-all"
                   src="./dist/img/icons8-tailwind-css-240.png"
                   alt=""
                   srcset=""
@@ -270,7 +270,7 @@
                 data-aos-mirror="true"
               >
                 <img
-                  class="max-w-full mx-auto w-40 m-16 hover:scale-125"
+                  class="max-w-full mx-auto w-40 m-16 hover:scale-125 hover:transition-all"
                   src="./dist/img/icons8-mysql-96.png"
                   alt=""
                   srcset=""
@@ -330,13 +330,13 @@
                 </p>
                 <div class="flex m-3 gap-5">
                   <a
-                    class="bg-slate-600 text-center text-text2 font-semibold text-xl mt-10 rounded-full w-28 hover:bg-transparent hover:text-slate-900 shadow-2xl border-2 p-2"
+                    class="bg-slate-600 text-center text-text2 font-semibold text-xl mt-10 rounded-full w-28 hover:bg-transparent hover:text-slate-900 shadow-2xl border-2 p-2 hover:transition-all"
                     href="https://wdp-12.github.io/FinalProject1_Grup3_Maze/"
                   >
                     View</a
                   >
                   <a
-                    class="bg-transparent text-center text-slate-600 font-semibold text-xl mt-10 rounded-full w-28 hover:bg-slate-600 hover:text-text2 shadow-2xl border-2 p-2"
+                    class="bg-transparent text-center text-slate-600 font-semibold text-xl mt-10 rounded-full w-28 hover:bg-slate-600 hover:text-text2 shadow-2xl border-2 p-2 hover:transition-all"
                     href="https://github.com/wdp-12/FinalProject1_Grup3_Maze"
                   >
                     Github</a
@@ -351,7 +351,7 @@
                 data-aos-mirror="true"
               >
                 <img
-                  class="justify-center self-center mt-7 items-center hover:rotate-3 hover:scale-105"
+                  class="justify-center self-center mt-7 items-center hover:rotate-3 hover:scale-105 hover:transition-all"
                   src="./dist/img/FP1.png"
                   alt=""
                   width="400"
@@ -375,7 +375,7 @@
                 data-aos-mirror="true"
               >
                 <img
-                  class="m-20 hover:scale-125 hover:rotate-3"
+                  class="m-20 hover:scale-125 hover:rotate-3 hover:transition-all"
                   src="./dist/img/FP2.png"
                   alt=""
                   width="400"
@@ -407,13 +407,13 @@
 
                 <div class="flex m-3 gap-5">
                   <a
-                    class="bg-slate-600 text-center text-text2 font-semibold text-xl mt-10 rounded-full w-28 hover:bg-transparent hover:text-slate-900 shadow-2xl border-2 p-2"
+                    class="bg-slate-600 text-center text-text2 font-semibold text-xl mt-10 rounded-full w-28 hover:bg-transparent hover:text-slate-900 shadow-2xl border-2 p-2 hover:transition-all"
                     href="https://finalproject2-kelompok1.netlify.app/"
                   >
                     View</a
                   >
                   <a
-                    class="bg-transparent text-center text-slate-600 font-semibold text-xl mt-10 rounded-full w-28 hover:bg-slate-600 hover:text-text2 shadow-2xl border-2 p-2"
+                    class="bg-transparent text-center text-slate-600 font-semibold text-xl mt-10 rounded-full w-28 hover:bg-slate-600 hover:text-text2 shadow-2xl border-2 p-2 hover:transition-all"
                     href="https://github.com/wdp-12/FinalProject2-kelompok1"
                   >
                     Github</a
@@ -449,13 +449,13 @@
                 </p>
                 <div class="flex m-3 gap-5">
                   <a
-                    class="bg-slate-600 text-center text-text2 font-semibold text-xl mt-10 rounded-full w-28 hover:bg-transparent hover:text-slate-900 shadow-2xl border-2 p-2"
+                    class="bg-slate-600 text-center text-text2 font-semibold text-xl mt-10 rounded-full w-28 hover:bg-transparent hover:text-slate-900 shadow-2xl border-2 p-2 hover:transition-all"
                     href="https://final-project3-kelompok3.vercel.app/"
                   >
                     View</a
                   >
                   <a
-                    class="bg-transparent text-center text-slate-600 font-semibold text-xl mt-10 rounded-full w-28 hover:bg-slate-600 hover:text-text2 shadow-2xl border-2 p-2"
+                    class="bg-transparent text-center text-slate-600 font-semibold text-xl mt-10 rounded-full w-28 hover:bg-slate-600 hover:text-text2 shadow-2xl border-2 p-2 hover:transition-all"
                     href="https://github.com/wdp-12/finalProject3_kelompok3"
                   >
                     Github</a
@@ -471,7 +471,7 @@
                 data-aos-mirror="true"
               >
                 <img
-                  class="m-2 hover:scale-110 hover:rotate-6"
+                  class="m-2 hover:scale-110 hover:rotate-6 hover:transition-all"
                   src="./dist/img/FP3.png"
                   alt=""
                   width="400"
@@ -502,7 +502,7 @@
               </h1>
             </div>
             <div class="flex m-20 justify-evenly">
-              <div class="flex flex-col gap-2 mt-20">
+              <div class="flex flex-col gap-2 self-center">
                 <div
                   class="w-full flex p-5 bg-secondary shadow-2xl rounded-xl"
                   data-aos="fade-right"
@@ -612,7 +612,7 @@
                     data-aos-mirror="true"
                   ></textarea>
                   <button
-                    class="bg-slate-700 p-2 w-40 rounded-xl text-text2 font-semibold font-serif text-lg hover:border-stone-200 hover:border-2 hover:bg-slate-400"
+                    class="bg-slate-700 p-2 w-40 rounded-xl text-text2 font-semibold font-serif text-lg hover:border-stone-200 hover:bg-slate-400 hover:transition-all hover:text-slate-800"
                     data-aos="slide-left"
                     data-aos-delay="200"
                     data-aos-duration="2000"
@@ -629,7 +629,7 @@
       </section>
       <!-- end of Contact -->
       <!-- footer -->
-      <footer class="bg-secondary container rounded-xl">
+      <footer class="bg-secondary container rounded-xl mt-1 w-full">
         <div class="w-full p-5 justify-center flex">
           <h1 class="font-semibold font-serif text-xl text-slate-700">
             Copyright 2023 @Demitri-Ansssss
